--- a/.github/workflows/trunk1.yml
+++ b/.github/workflows/trunk1.yml
@@ -1,13 +1,7 @@
 name: trunk1
 
 on:
-  push:
-    branches:
-      - main
-      - release/*
-      - landchecks/*
-    tags:
-      - ciflow/trunk/*
+  pull_request:
   workflow_dispatch:
   schedule:
     - cron: 29 8 * * *  # about 1:29am PDT
